--- a/package.json
+++ b/package.json
@@ -24,7 +24,6 @@
     "nodemon": "^3.1.0",
     "pg": "^8.11.5",
     "pg-hstore": "^2.3.4",
-    "sequelize": "^6.37.2",
-    "@hapi/joi": "^17.1.1"
+    "sequelize": "^6.37.2"
   }
 }
