--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "nodemon": "^3.1.0",
     "pg": "^8.11.5",
     "pg-hstore": "^2.3.4",
-    "sequelize": "^6.37.2"
+    "sequelize": "^6.37.2",
+    "socket.io": "^4.7.5"
   }
 }
