--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "nodemon": "^3.1.0",
     "pg": "^8.11.5",
     "pg-hstore": "^2.3.4",
+    "request": "^2.88.2",
     "sequelize": "^6.37.2"
   }
 }
